<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/thermometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        app:srcCompat="@drawable/index"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvPrompt"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:text="@string/count_the_number_of_chirps_in_25_seconds_i_will_give_you_the_approx_temperature_in_degree_celsius"
        android:textColor="#547DCF" />

    <EditText
        android:id="@+id/etTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_chirps_count_here"
        android:inputType="number"
        android:textColor="#547DCF"
        android:textColorHint="#697FFB"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#1976D2"
        android:text="@string/submit"
        android:textColor="#F1EAEA" />

    <TextView
        android:id="@+id/tvDisp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/textview"
        android:textColor="#547DCF" />

</LinearLayout>